syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup.edu";
option java_outer_classname = "KeyManagerGrpcOuterClassName";

package br.com.zup.edu;

service KeyManagerGrpcService {
  rpc register(RegisterPixKeyRequest) returns (RegisterPixKeyResponse) {}
}

message DetailsError{
  int32 code     = 1;
}

message RegisterPixKeyRequest {
  // enums
  enum AccountType{
    CONTA_CORRENTE = 0;
    CONTA_POUPANCA = 1;
  }
  enum Type {
    RANDOM = 0;
    CPF    = 1;
    PHONE  = 2;
    EMAIL  = 3;
  }

  string idClient     = 1;
  Type keyType        = 2;
  string keyValue     = 3;
  AccountType account = 4;
}

message RegisterPixKeyResponse {
  string pixId = 1;
  string clientId = 2;
}